tests/checker/good/blowup_1.scilla
scilla_version 0

library Blowup

let not_owner_code = Int32 1
let foo = tfun 'A => fun (f : 'A -> 'A) => fun (x : 'A) => f x
let bar0 = tfun 'A => @foo ('A -> 'A)
let bar1 = tfun 'A => @bar0 ('A -> 'A)
let bar1 = tfun 'A => @bar0 ('A -> 'A)
let bar2 = tfun 'A => @bar1 ('A -> 'A)
let bar3 = tfun 'A => @bar2 ('A -> 'A)
let bar4 = tfun 'A => @bar3 ('A -> 'A)
let bar5 = tfun 'A => @bar4 ('A -> 'A)
let bar6 = tfun 'A => @bar5 ('A -> 'A)
let bar7 = tfun 'A => @bar6 ('A -> 'A)
let bar8 = tfun 'A => @bar7 ('A -> 'A)
let bar9 = tfun 'A => @bar8 ('A -> 'A)

contract Blowup (owner: ByStr20)

transition setHello (msg : String)
  e = {_eventname : "setHello()"; code : not_owner_code};
  event e
end